# cbs-onderwijsdata

./: .gitignore  CLAUDE.md  IDEE.md  README.md  catalogus.py  catalogus_ai.py  exploratie.py  mbo_analyse.py  pyproject.toml  vwo4_amsterdam_INTERPRETATIE.md  vwo4_g4_INTERPRETATIE.md  vwo_examen_herkomst_INTERPRETATIE.md
.github/workflows/: update-catalogus.yml
catalogus/: catalogus.py  catalogus_ai.py  uitbreiden.py
data/02-prepared/: cbs_datasets.json  cbs_datasets_ai.json
docs/: index.html  voorbeelden.json
docs/voorbeelden/: havo_slagingspercentage_rotterdam_INTERPRETATIE.md  mbo_diploma_trend_INTERPRETATIE.md  mbo_zij_instroom_INTERPRETATIE.md
onderwijsdata/: client.py
src/onderwijsdata/: __init__.py
src/onderwijsdata/data/: cbs_datasets.json  cbs_datasets_ai.json
voorbeelden/: havo_slagingspercentage_rotterdam.py  ho_ingeschrevenen.py  mbo_arbeidsmarkt.py  mbo_deelnemers.py  mbo_diploma_trend.py  mbo_zij_instroom.py
voorbeelden/output/: almere_vo_herkomst_INTERPRETATIE.md
