[project]
name = "onderwijsdata"
version = "0.1.0"
description = "Python client voor publieke CBS onderwijsdata via de OData API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "cedanl", email = "info@cedanl.nl" }]
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.optional-dependencies]
analyse = ["pandas", "matplotlib"]
catalogus = ["anthropic>=0.87.0"]

[project.urls]
Homepage = "https://cedanl.github.io/cbs-onderwijsdata"
Repository = "https://github.com/cedanl/cbs-onderwijsdata"

[tool.hatch.build.targets.wheel]
packages = ["src/onderwijsdata"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
